FifTask.Logic was changed. Interface IExpression and Class Context were added

--- a/FifthTask.Logic/FifthTask.Logic.csproj
+++ b/FifthTask.Logic/FifthTask.Logic.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\Expressions\Helpers\" />
+    <Folder Include="Components\Expressions\Nonterminal\" />
+    <Folder Include="Components\Expressions\Terminal\" />
+    <Folder Include="UserInterface\" />
+  </ItemGroup>
+
 </Project>
